# ol2notion

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml  release.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: job.yaml  serviceaccount.yaml
src/: arguments.rs  main.rs  models.rs
