[package]
name = "ol2notion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
futures = "0.3.21"
notion = { git = "https://github.com/bspradling/notion", branch = "feature/create-page" }
open-library = "0.7.1"
rand = "0.8.4"
structopt = "0.3.26"
tokio = "1.16.1"

[dependencies.url]
version = "2.2.2"
features = ["serde"]
